@startuml CATC Document Request Portal - Conceptual Model
!theme plain
skinparam shadowing false

entity "User" as User
entity "Role / Group" as Role
entity "StudentMasterList" as StudentMasterList
entity "Profile" as Profile
entity "OTPToken" as OTPToken
entity "DocumentType" as DocumentType
entity "DocumentRequest" as DocumentRequest
entity "StudentBalance" as StudentBalance
entity "CollectionLog" as CollectionLog
entity "Notification" as Notification
entity "AuditLog" as AuditLog
entity "TORRequestHistory" as TORRequestHistory
entity "SystemCounter" as SystemCounter

User }o--o{ Role
User ||--|| Profile
User ||--o{ OTPToken
User ||--o{ DocumentRequest
User ||--o{ Notification
User ||--o{ AuditLog
User ||--o{ TORRequestHistory

StudentMasterList ||--o| StudentBalance
StudentMasterList ||..|| User : authorizes login identity

DocumentType ||--o{ DocumentRequest
DocumentRequest }o--|| CollectionLog : paid through

DocumentRequest }o..|| SystemCounter : receipt / tracking sequence
DocumentRequest ||..> Notification : generates updates
DocumentRequest ||..> AuditLog : records state change
DocumentRequest ||..> TORRequestHistory : persists TOR completion

note right of DocumentRequest
Core lifecycle:
PENDING
APPROVED / PAYMENT_REQUIRED
PENDING_CASHIER_APPROVAL
PAID
PROCESSING
READY or AWAITING_COURIER_PICKUP
PICKED_UP_AWAITING_DELIVERY
IN_TRANSIT
DELIVERED / COMPLETED / REJECTED
end note

note bottom of StudentMasterList
Acts as the pre-authorized student registry
for OTP-based access to the portal.
end note

@enduml
